--- a/plugin.xml
+++ b/plugin.xml
@@ -27,8 +27,8 @@ version="1.0.1">
 			android:name="com.baidu.frontia.FrontiaApplication"></application> -->
 
 			<!-- 百度云推送 -->
-			<!--     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-			-->
+			     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+			
 			<!-- Push service 运行需要的权限 -->
 			<uses-permission android:name="android.permission.INTERNET"/>
 			<uses-permission android:name="android.permission.READ_PHONE_STATE" />
